--- a/auth/login-en.html
+++ b/auth/login-en.html
@@ -135,7 +135,7 @@
           const data = await res.json().catch(() => ({}));
 
           if (data.status === 'ok') {
-            window.location.href = '/profile/index.html';
+            window.location.href = '/profile/index-en.html';
             return;
           }
 
