--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
       <img src="https://files.l2rankzone.com/banners/l2rankzone-l2servers-l2top-v3.png"
            alt="l2rankzone lineage 2 private l2servers">
     </a>
-<!-- L2Top.CO -->
-  <a href="https://l2top.co/vote/server/OrdoDraconis"
-     target="_blank"
-     rel="noopener"
-     title="Vote for OrdoDraconis in L2Top.CO">
-    <img src="https://l2top.co/img/banners/l2topco_mini2.png"
-         alt="Vote for OrdoDraconis in L2Top.CO">
-  </a>
+<!-- HotServers -->
+<a href="https://hotservers.org/servers/vote/387"
+   target="_blank"
+   rel="noopener"
+   title="Vote for OrdoDraconis on HotServers.org">
+  <img class="vote-banner"
+       src="https://hotservers.org/voting-banner-image/387/assets/img/voting-banners/140x30_static/4.png"
+       alt="Vote for OrdoDraconis on HotServers.org">
+</a>
   <!-- L2Network -->
     <a href="https://l2network.eu/index.php?a=in&u=Ainestol"
        target="_blank" rel="noopener"
