--- a/profile/index.html
+++ b/profile/index.html
@@ -1158,6 +1158,124 @@ document.getElementById('convertVcToDc')?.addEventListener('click', async (e) =>
 });
 </script>
 
+<script>
+let shopProducts = [];
+let myGameAccounts = [];
+
+async function loadShop() {
+  const box = document.getElementById('shopBox');
+  if (!box) return;
+
+  box.innerHTML = '<div class="muted">Načítám produkty…</div>';
+
+  const [pRes, aRes] = await Promise.all([
+    fetch('/api/shop_list.php', {credentials:'same-origin'}),
+    fetch('/api/list_game_accounts_min.php', {credentials:'same-origin'})
+  ]);
+
+  const pData = await pRes.json().catch(()=>({}));
+  const aData = await aRes.json().catch(()=>({}));
+
+  shopProducts = (pData.ok && Array.isArray(pData.products)) ? pData.products : [];
+  myGameAccounts = (aData.ok && Array.isArray(aData.accounts)) ? aData.accounts : [];
+
+  box.innerHTML = '';
+
+  if (!shopProducts.length) {
+    box.innerHTML = '<div class="muted">Žádné produkty.</div>';
+    return;
+  }
+
+  shopProducts.forEach(prod => {
+    const row = document.createElement('div');
+    row.className = 'mini-row';
+
+    const needsGameAcc = prod.code === 'PREM_GAME_30D';
+
+    const selectHtml = needsGameAcc ? `
+      <select class="shop-acc" data-pid="${prod.id}">
+        ${myGameAccounts.map(a => `<option value="${a.id}">${a.login}</option>`).join('')}
+      </select>
+    ` : '';
+
+    row.innerHTML = `
+      <div class="mini-row">
+        <div>
+          <strong>${prod.name}</strong><br>
+          <span class="muted">${prod.description || ''}</span>
+        </div>
+
+        <div style="display:flex; gap:10px; align-items:center; justify-content:flex-end;">
+          ${selectHtml}
+          <span class="tag">${prod.price_dc} DC</span>
+          <button class="btn btn-small btn-primary shop-buy" data-id="${prod.id}">
+            Koupit
+          </button>
+        </div>
+      </div>
+    `;
+
+    box.appendChild(row);
+  });
+}
+
+document.addEventListener('click', async (e) => {
+  const btn = e.target.closest('.shop-buy');
+  if (!btn) return;
+
+  const productId = parseInt(btn.dataset.id, 10);
+  if (!productId) return;
+
+  const prod = shopProducts.find(p => Number(p.id) === productId);
+  if (!prod) return;
+
+  btn.disabled = true;
+
+  try {
+    const payload = { product_id: productId };
+
+    if (prod.code === 'PREM_GAME_30D') {
+      const sel = document.querySelector(`.shop-acc[data-pid="${productId}"]`);
+      const gaId = parseInt(sel?.value || '0', 10);
+      if (!gaId) {
+        notify?.('error', 'Vyber herní účet');
+        btn.disabled = false;
+        return;
+      }
+      payload.game_account_id = gaId;
+    }
+
+    const res = await fetch('/api/shop_buy.php', {
+      method: 'POST',
+      credentials: 'same-origin',
+      headers: {'Content-Type':'application/json'},
+      body: JSON.stringify(payload)
+    });
+
+    const data = await res.json().catch(()=>({}));
+
+    if (data.ok) {
+      notify?.('success', 'Nákup dokončen');
+      if (typeof loadDcBalance === 'function') loadDcBalance();
+      if (typeof loadVoteBalance === 'function') loadVoteBalance();
+      return;
+    }
+
+    const err = data.error || 'Chyba nákupu';
+    if (err === 'INSUFFICIENT_FUNDS') notify?.('error', 'Nedostatek DC');
+    else if (err === 'ALREADY_PURCHASED') notify?.('error', 'Už koupeno');
+    else notify?.('error', err);
+
+  } finally {
+    btn.disabled = false;
+  }
+});
+
+document.addEventListener('DOMContentLoaded', () => {
+  // načti shop, až když uživatel přepne na tab (ušetříme requesty)
+  document.querySelector('[data-tab="shop"]')?.addEventListener('click', loadShop);
+});
+</script>
 
 </body>
 </html>
