--- a/profile/index.html
+++ b/profile/index.html
@@ -34,6 +34,7 @@
     <button type="button" class="tab" data-tab="vote">Hlasování pro server</button>
     <button type="button" class="tab" data-tab="donate">Podpora serveru</button>
     <button type="button" class="tab" data-tab="support">Hlášení bugů</button>
+    <button type="button" class="tab" data-tab="shop">Tržiště</button>
   </div>
 
   <div class="profile-panels">
@@ -160,6 +161,15 @@
   </div>
 </div>
     </section>
+
+<section id="shop" class="profile-card panel">
+  <h2>Shop</h2>
+  <p class="muted">Nákup za Dragon Coin (DC).</p>
+
+  <div id="shopBox" class="link-list">
+    <div class="muted">Načítám produkty…</div>
+  </div>
+</section>
 
       <section id="donate" class="profile-card panel">
   <h2>Podpora serveru</h2>
