--- a/profile/index.html
+++ b/profile/index.html
@@ -166,7 +166,7 @@
   <h2>Tržiště</h2>
 <p class="muted">Nákup za Dragon Coin (DC).</p>
 
-<div class="profile-tabs" style="margin:10px 0 14px;">
+<div class="shop-tabs" style="margin:10px 0 14px;">
   <button type="button" class="tab active" data-shop-tab="premium">Premium</button>
   <button type="button" class="tab" data-shop-tab="mounts">Mounty</button>
   <button type="button" class="tab" data-shop-tab="cosmetic">Vzhled</button>
@@ -271,8 +271,7 @@ document.addEventListener('DOMContentLoaded', async () => {
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  const tabs = document.querySelectorAll('.profile-tabs .tab');
-  const panels = document.querySelectorAll('.profile-panels .panel');
+  const tabs = document.querySelectorAll('.profile-shell > .profile-tabs .tab');
 
   const show = (key) => {
     tabs.forEach(t => t.classList.toggle('active', t.dataset.tab === key));
