--- a/profile/index.html
+++ b/profile/index.html
@@ -272,24 +272,24 @@ document.addEventListener('DOMContentLoaded', async () => {
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const tabs = document.querySelectorAll('.profile-shell > .profile-tabs .tab');
+  const panels = document.querySelectorAll('.profile-panels .panel');
 
   const show = (key) => {
     tabs.forEach(t => t.classList.toggle('active', t.dataset.tab === key));
     panels.forEach(p => p.classList.toggle('active', p.id === key));
   };
+
   tabs.forEach(t => t.addEventListener('click', () => show(t.dataset.tab)));
-  const first = document.querySelector('.profile-tabs .tab.active') || tabs[0];
+
+  const first = document.querySelector('.profile-shell > .profile-tabs .tab.active') || tabs[0];
   if (first) show(first.dataset.tab);
+
   const params = new URLSearchParams(window.location.search);
-const tab = params.get('tab');
-
-if (tab) {
-  const btn = document.querySelector(`[data-tab="${tab}"]`);
-  if (btn) {
-    btn.click();
+  const tab = params.get('tab');
+  if (tab) {
+    const btn = document.querySelector(`.profile-shell > .profile-tabs [data-tab="${tab}"]`);
+    if (btn) btn.click();
   }
-}
-
 });
 </script>
 
