--- a/profile/index.html
+++ b/profile/index.html
@@ -232,7 +232,7 @@
   </div>
 </main>
 
-<script src="./profile.js" defer></script>
+<script src="/ordodraconis/profile/profile.js" defer></script>
 
 </body>
 </html>
