--- a/profile/bug_detail.html
+++ b/profile/bug_detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="cs" data-default-lang="cs">
 <head>
   <meta charset="UTF-8">
   <title>Detail hlášení | Ordo Draconis</title>
@@ -58,7 +58,7 @@
 </p>
 </div>
 </main>
+<script src="/profile/bug_detail.js" defer></script>
 
-<script src="/profile/bug_detail.js"></script>
 </body>
 </html>
