--- a/profile/bug_detail.html
+++ b/profile/bug_detail.html
@@ -13,7 +13,7 @@
   <div class="logo"><a href="/">Ordo Draconis</a></div>
   <div class="auth auth-center">
     <a id="backToProfile" class="btn"></a>
-    <a href="/api/logout.php" class="btn">Odhlásit se</a>
+    <a href="/api/logout.php" class="btn" id="logoutBtn">Odhlásit se</a>
   </div>
 </header>
 
