--- a/profile/index.html
+++ b/profile/index.html
@@ -119,9 +119,12 @@
     <section id="vote" class="profile-card panel">
       <h2>Hlasování pro server</h2>
       <div id="voteBalance" class="wallet-balance">
+  <img src="/img/vote-coin.png" alt="Vote Coin" class="coin-icon">
   Vote Coin: <strong>0</strong>
 </div>
+
 <div id="dcBalance" class="wallet-balance">
+  <img src="/img/dragon-coin.png" alt="Dragon Coin" class="coin-icon">
   Dragon Coin: <strong>0</strong>
 </div>
      <p class="muted">
