--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -24,7 +24,25 @@
 </header>
 
 <main class="auth-container profile-shell">
-  <h1>My profile</h1>
+  <main class="auth-container profile-shell">
+
+  <div class="profile-header">
+    <h1>My profile</h1>
+
+    <div class="wallet-top">
+      <div id="voteBalanceTop" class="wallet-pill">
+        <img src="/img/vote-coin.png" alt="" class="coin-icon coin-icon--top">
+        <span>VC</span>
+        <strong>0</strong>
+      </div>
+
+      <div id="dcBalanceTop" class="wallet-pill">
+        <img src="/img/dragon-coin.png" alt="" class="coin-icon coin-icon--top">
+        <span>DC</span>
+        <strong>0</strong>
+      </div>
+    </div>
+  </div>
 
   <div class="profile-tabs">
     <button type="button" class="tab active" data-tab="accounts">Accounts</button>
@@ -115,12 +133,7 @@
 
     <section id="vote" class="profile-card panel">
       <h2>Server vote</h2>
-      <div id="voteBalance" class="wallet-balance">
-  Vote Coin: <strong>0</strong>
-      </div>
-      <div id="dcBalance" class="wallet-balance">
-  Dragon Coin: <strong>0</strong>
-      </div>
+      
       <p class="muted">
   Click a site to vote. The list is loaded automatically from our database (all active vote sites).
 </p>
