--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -178,6 +178,7 @@
   <div class="shop-tabs" style="margin:10px 0 14px;">
     <button type="button" class="tab active" data-shop-tab="premium">Premium</button>
     <button type="button" class="tab" data-shop-tab="mounts">Mounts</button>
+    <button type="button" class="tab" data-shop-tab="cloaks">Cloaks</button>
     <button type="button" class="tab" data-shop-tab="cosmetic">Cosmetics</button>
   </div>
 
@@ -185,6 +186,7 @@
 
   <div id="shopPremium" class="link-list"></div>
   <div id="shopMounts" class="link-list" style="display:none;"></div>
+  <div id="shopCloaks" class="link-list" style="display:none;"></div>
   <div id="shopCosmetic" class="link-list" style="display:none;"></div>
 </section>
 
