--- a/profile/index.html
+++ b/profile/index.html
@@ -179,7 +179,8 @@
 
 <div class="shop-tabs" style="margin:10px 0 14px;">
   <button type="button" class="tab active" data-shop-tab="premium">Premium</button>
-  <button type="button" class="tab" data-shop-tab="mounts">Mounty</button>
+  <button type="button" class="tab" data-shop-tab="mounts">Mounti</button>
+  <button type="button" class="tab" data-shop-tab="cloaks">Pláště</button>
   <button type="button" class="tab" data-shop-tab="cosmetic">Vzhled</button>
 </div>
 
@@ -187,6 +188,7 @@
 
 <div id="shopPremium" class="link-list"></div>
 <div id="shopMounts" class="link-list" style="display:none;"></div>
+<div id="shopCloaks" class="link-list" style="display:none;"></div>
 <div id="shopCosmetic" class="link-list" style="display:none;"></div>
 </section>
 
