--- a/profile/index.html
+++ b/profile/index.html
@@ -244,7 +244,17 @@
 
   </div>
 </main>
+ <div id="shopConfirmModal" class="modal hidden">
+  <div class="modal-box shop-confirm">
+    <h3 id="shopConfirmTitle">Potvrdit nákup</h3>
+    <div id="shopConfirmText" class="muted" style="margin-top:8px; white-space:pre-line;"></div>
 
+    <div class="modal-actions" style="margin-top:16px;">
+      <button id="shopConfirmCancel" class="btn">Zrušit</button>
+      <button id="shopConfirmOk" class="btn btn-primary">Koupit</button>
+    </div>
+  </div>
+</div>
 <script src="./profile.js" defer></script>
 
 </body>
