--- a/profile/index-en.html
+++ b/profile/index-en.html
@@ -175,7 +175,7 @@
   <h2>Marketplace</h2>
   <p class="muted">Purchase with Dragon Coin (DC).</p>
 
-  <div class="shop-tabs" style="margin:10px 0 14px;">
+  <div class="shop-tabs shop-subtabs">
     <button type="button" class="tab active" data-shop-tab="premium">Premium</button>
     <button type="button" class="tab" data-shop-tab="mounts">Mounts</button>
     <button type="button" class="tab" data-shop-tab="cloaks">Cloaks</button>
