--- a/profile/index.html
+++ b/profile/index.html
@@ -177,7 +177,7 @@
   <h2>Tržiště</h2>
 <p class="muted">Nákup za Dragon Coin (DC).</p>
 
-<div class="shop-tabs" style="margin:10px 0 14px;">
+<div class="shop-tabs shop-subtabs">
   <button type="button" class="tab active" data-shop-tab="premium">Premium</button>
   <button type="button" class="tab" data-shop-tab="mounts">Mounti</button>
   <button type="button" class="tab" data-shop-tab="cloaks">Pláště</button>
